# u_tire_app

./: -d  .env  .env.dev  .env.dev.example  .env.prod  .env.prod.example  .gitignore  README.md  app.py  backup.dump  backup_input_page.sql  config.py  convert_sqlite_to_postgres.py  db.py  debug.py  directory_structure.txt  dump.sql  file_structure.txt  forms.py  inventory.db  models.py  postgresql_dump.sql  pyproject.toml  render.yaml  render_backup.dump  requirements.txt  reset_inventory.py  sqlite_dump.sql  utils.py
database/: database_backup.sql  migration_datetime.sql  migration_datetime_v2.sql  schema_only.sql  u_tire_app.db  u_tire_app.db.sql  u_tire_app.sqbpro  u_tire_appのコピー.db  u_tire_appのコピー2.db.sql  u_tire_appのコピー250209.db  u_tire_appコピー.db.sql  update_to_jst_v2.sql
instance/: .env
migrations/: env.py
migrations/versions/: 0335770878fb_add_tracking_columns_to_width.py  5890b4df470f_add_tracking_columns_to_inch.py  5ac52fdb06e4_recreate_database_with_inputpage_and_.py  6a66bf989406_add_fk_to_last_edited_by.py  7346ce46d166_initial_migration.py  8e2ebcff4db4_recreate_migrations.py  9488f762bed3_add_created_by_to_input_page.py  c1d9b3470368_remove_is_custom_from_ply_rating_retry.py  (+1 more)
routes/: admin.py
static/: manifest.json  script.js  service-worker.js
static/css/: style.css
templates/: alert_page.html  base.html  dispatch_confirm.html  dispatch_page.html  dispatch_pdf.html  edit_page.html  history_page.html  index.html  input_page.html  inventory_list.html  login.html  preview.html  register.html  register_success.html  search_page.html
(+1 files in other folders)
