[tool.poetry]
name = "u-tire-app"
version = "0.1.0"
description = ""
authors = ["murata <finesea_bluesky@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
flask = "*"
gunicorn = ">=23.0.0,<24.0.0"
# 他の依存ライブラリも必要に応じて追加

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
